--- a/src/component/todolist.css
+++ b/src/component/todolist.css
@@ -5,4 +5,12 @@
     text-align: left;
     margin: 10px;
     padding: 10px;
+    display: flex;
+    align-items: center;
+    
+}
+
+.to-do-group {
+    justify-content: center;
+
 }
