--- a/src/component/todolist.css
+++ b/src/component/todolist.css
@@ -3,14 +3,7 @@
     height: 20px;
     border: solid;
     text-align: left;
-    margin: 10px;
+    margin: 10px auto;
     padding: 10px;
-    display: flex;
-    align-items: center;
     
-}
-
-.to-do-group {
-    justify-content: center;
-
 }
