--- a/src/features/todo/todolist.css
+++ b/src/features/todo/todolist.css
@@ -1,19 +1,26 @@
 .to-do-item {
     width: 500px;
-    height: 20px;
-    border: solid;
+    height: 50px;
+    /* border: solid; */
     text-align: left;
     margin: 10px auto;
-    padding: 10px;
+    display: flex;
+    
     
 }
 
-.to-do-item div {  
-    display: inline-block;  
+.to-do-content  {  
+    flex-grow: 1;
+    border: solid;
+    padding: 10px;
+    /* display: inline-block;   */
 }
 
 
 
 .delete-item{
-    float: right;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
